app/assets/stylesheets/spectrum_identification_results.css.scss
// Place all the styles related to the SpectrumIdentificationResults controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


div.dataTables_info {
    width: 40%;
}
 
.dataTables_paginate {
    width: 400px;
    height: 22px;
    line-height: 22px;
}
 
div.dataTables_paginate span.paginate_button,
    div.dataTables_paginate span.paginate_active {
    border: 1px solid #aaa;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    padding: 2px 5px;
    margin: 0 3px;
    cursor: pointer;
    *cursor: hand;
}
 
div.dataTables_paginate span.paginate_button {
    background-color: #ddd;
}
 
div.dataTables_paginate span.paginate_button:hover {
    background-color: #ccc;
}
 
div.dataTables_paginate span.paginate_active {
    background-color: #99B3FF;
}



div.dataTables_paginate a {
  margin: 0 5px;
  cursor: pointer;
  *cursor: hand;
}


div.dataTables_paginate a.ui-state-disabled {
    color: gray;
  }

table#sii_table {
  //border: solid 1px gray;
  //border-radius: 4px;
  width: 100%;
  margin: 0;
    th { text-align: center; }
    .sii_id {width: 30%} 
  }



.underline {text-decoration: underline;}












.axis path,
.axis line {
    fill: none;
    stroke: black;
    shape-rendering: crispEdges;
}

.axis text {
    font-family: sans-serif;
    font-size: 11px;
}


#spectrum { 
  width: 100%;
    svg {
      border: 1px solid gray;
      border-radius: 6px;
      display: block;
      margin: 1% auto;
    }
  }


#tooltip {
        position: absolute;
        width: 100px;
        height: auto;
        padding: 10px;
        background-color: white;
        -webkit-border-radius: 10px;
        -moz-border-radius: 10px;
        border-radius: 10px;
        -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
        -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
        pointer-events: none;
}

#tooltip.hidden {
        display: none;
}

#tooltip p {
        margin: 0;
        font-family: sans-serif;
        font-size: 12px;
        line-height: 15px;
}

